objects/Opportunity_Overview__c/Opportunity_Overview__c.object-meta.xml
<CustomObject>
    <label>Opportunity Overview</label>
    <nameField>
        <label>Opportunity Overview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Overviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>