objects/Opportunity_Overview__c/fields/Days_Since_First_Demo__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_First_Demo__c</fullName>
    <label>Days Since First Demo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>