objects/Opportunity_Overview__c/fields/Gross_Value__c.field-meta.xml
<CustomField>
    <fullName>Gross_Value__c</fullName>
    <label>Gross Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>