objects/Opportunity_Overview__c/fields/Net_Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Discount_Value__c</fullName>
    <label>Net Discount Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>